--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -30,7 +30,7 @@
 
       <nav class="navbar navbar-expand-lg fixed-top shadow navbar-light bg-white">
         <div class="container-fluid">
-          <div class="d-flex align-items-center"><a class="navbar-brand py-1" href="index-2.html">
+          <div class="d-flex align-items-center"><a class="navbar-brand py-1" href="/">
           <h3>my Distro Hope</h3>
           </div>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
@@ -41,51 +41,16 @@
 
 
               <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                <a class="btn btn-primary" href="user-add-0.html">Add Blog</a></li>
+                <a class="btn btn-primary" href="{% url 'login_view' %}">Add Blog</a></li>
             </ul>
           </div>
         </div>
       </nav>
       <!-- /Navbar -->
     </header>
-    <section class="position-relative py-6">
-      <img class="bg-image" src="https://images.pexels.com/photos/1761279/pexels-photo-1761279.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="bg-white rounded-lg shadow p-5"><strong class="text-uppercase text-secondary d-inline-block mb-2 text-sm">Featured</strong>
-              <h2 class="mb-3">Lorem Ipsum</h2>
-              <p class="text-muted">Dignissimos enim corrupti adipisci atque. Dolorum et facere earum provident aut minima. Aliquid quas sequi fugiat. Rerum dicta quia corrupti facilis veritatis sint natus. Vel quo qui ut adipisci. Dolores et nulla est dicta non repudiandae pariatur.</p><a class="btn btn-link p-0" href="post.html">Continue reading <i class="fa fa-long-arrow-alt-right"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="py-6">
-      <div class="container">
-        <div class="row mb-5">
-          <!-- blog item-->
-          <div class="col-lg-4 col-sm-6 mb-4 hover-animate">
-            <div class="card shadow border-0 h-100"><a href="post.html"><img class="img-fluid card-img-top" src="https://images.pexels.com/photos/4101555/pexels-photo-4101555.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="..."/></a>
-              <div class="card-body"><a class="text-uppercase text-muted text-sm letter-spacing-2" href="#">Travel </a>
-                <h5 class="my-2"><a class="text-dark" href="post.html">Autumn fashion tips and tricks          </a></h5>
-                <p class="text-gray-500 text-sm my-3"><i class="far fa-clock mr-2"></i>January 16, 2016</p>
-                <p class="my-2 text-muted text-sm">Pellentesque habitant morbi tristique senectus. Vestibulum tortor quam, feugiat vitae, ultricies ege...</p><a class="btn btn-link pl-0" href="post.html">Read more<i class="fa fa-long-arrow-alt-right ml-2"></i></a>
-              </div>
-            </div>
-          </div>
+    {% block start %}
 
-
-        </div>
-        <!-- Pagination -->
-        <nav aria-label="Blog pagination">
-          <ul class="pagination justify-content-between mb-5">
-            <li class="page-item"><a class="page-link text-sm rounded" href="#"> <i class="fa fa-chevron-left mr-1"></i>Older posts</a></li>
-            <li class="page-item disabled"><a class="page-link text-sm rounded" href="#" tabindex="-1">Newer posts  <i class="fa fa-chevron-right ml-1"></i></a></li>
-          </ul>
-        </nav>
-      </div>
-    </section>
+    {% endblock %}
     <!-- Footer-->
     <footer class="position-relative z-index-10 d-print-none">
 
