--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -23,9 +23,12 @@
     <link rel="stylesheet" href="/media/css/default.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="/media/css/custom.css">
+    <!-- JS -->
+    <script src="/media/js/main.js"></script>
 
    </head>
   <body style="padding-top: 72px;">
+    <input type="hidden" id="csrf" value="{{csrf_token}}">
     <header class="header">
 
       <nav class="navbar navbar-expand-lg fixed-top shadow navbar-light bg-white">
@@ -39,9 +42,18 @@
 
             <ul class="navbar-nav ml-auto">
 
-
+              {% if request.user.is_authenticated %}
               <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                <a class="btn btn-primary" href="{% url 'login_view' %}">Add Blog</a></li>
+                <a class="btn btn-info" href="{% url 'login_view' %}">Add Blog</a>
+              </li>
+              <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
+                <a class="btn btn-danger" href="{% url 'login_view' %}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
+                <a class="btn btn-primary" href="{% url 'login_view' %}">Add Blog</a>
+              </li>
+              {% endif %}
             </ul>
           </div>
         </div>
