--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -2,39 +2,67 @@
 
 {% block start %}
 <section class="position-relative py-6">
-      <img class="bg-image" src="https://images.pexels.com/photos/1761279/pexels-photo-1761279.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+      {%  for i in latest %}
+      <img class="bg-image" src="/media/{{i.image}}" alt="">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <div class="bg-white rounded-lg shadow p-5"><strong class="text-uppercase text-secondary d-inline-block mb-2 text-sm">Featured</strong>
-              <h2 class="mb-3">Lorem Ipsum</h2>
-              <p class="text-muted">Dignissimos enim corrupti adipisci atque. Dolorum et facere earum provident aut minima. Aliquid quas sequi fugiat. Rerum dicta quia corrupti facilis veritatis sint natus. Vel quo qui ut adipisci. Dolores et nulla est dicta non repudiandae pariatur.</p><a class="btn btn-link p-0" href="post.html">Continue reading <i class="fa fa-long-arrow-alt-right"></i></a>
+            <div class="bg-white rounded-lg shadow p-5"><strong class="text-uppercase text-secondary d-inline-block mb-2 text-sm">Latest</strong>
+              <h2 class="mb-3">{{i.title}}</h2>
+              <p class="text-muted">{{i.content|truncatechars:"150"}}</p><a class="btn btn-link p-0" href="{% url 'blog_detail' i.slug %} ">Continue reading <i class="fa fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
         </div>
       </div>
+      {% endfor %}
     </section>
     <section class="py-6">
       <div class="container">
         <div class="row mb-5">
           <!-- blog item-->
+          {% for blog in blogs %}
           <div class="col-lg-4 col-sm-6 mb-4 hover-animate">
-            <div class="card shadow border-0 h-100"><a href="post.html"><img class="img-fluid card-img-top" src="https://images.pexels.com/photos/4101555/pexels-photo-4101555.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="..."/></a>
-              <div class="card-body"><a class="text-uppercase text-muted text-sm letter-spacing-2" href="#">Travel </a>
-                <h5 class="my-2"><a class="text-dark" href="post.html">Autumn fashion tips and tricks          </a></h5>
-                <p class="text-gray-500 text-sm my-3"><i class="far fa-clock mr-2"></i>January 16, 2016</p>
-                <p class="my-2 text-muted text-sm">Pellentesque habitant morbi tristique senectus. Vestibulum tortor quam, feugiat vitae, ultricies ege...</p><a class="btn btn-link pl-0" href="post.html">Read more<i class="fa fa-long-arrow-alt-right ml-2"></i></a>
+            <div class="card shadow border-0 h-100">
+              <a href="{% url 'blog_detail' blog.slug %}">
+              <img class="img-fluid card-img-top" src="/media/{{blog.image}}" alt="..."/></a>
+              <div class="card-body"><a class="text-uppercase text-muted text-sm letter-spacing-2" href="#">
+                {{blog.user.username}} </a>
+                <h5 class="my-2"><a class="text-dark" href="{% url 'blog_detail' blog.slug %}">{{blog.title}}          </a></h5>
+                <p class="text-gray-500 text-sm my-3"><i class="far fa-clock mr-2"></i>{{blog.created_at}}</p>
+                <p class="my-2 text-muted text-sm">
+                    {{blog.content|truncatechars:200}}
+                </p>
+                <a class="btn btn-link pl-0" href="{% url 'blog_detail' blog.slug %}">Read more<i class="fa fa-long-arrow-alt-right ml-2"></i></a>
               </div>
             </div>
           </div>
+          {% endfor %}
 
 
         </div>
         <!-- Pagination -->
         <nav aria-label="Blog pagination">
           <ul class="pagination justify-content-between mb-5">
-            <li class="page-item"><a class="page-link text-sm rounded" href="#"> <i class="fa fa-chevron-left mr-1"></i>Older posts</a></li>
-            <li class="page-item disabled"><a class="page-link text-sm rounded" href="#" tabindex="-1">Newer posts  <i class="fa fa-chevron-right ml-1"></i></a></li>
+            {% if blogs.has_next %}
+            <li class="page-item">
+              <a class="page-link text-sm rounded" href="{% url 'home' %}?page={{blogs.next_page_number}}">
+              <i class="fa fa-chevron-left mr-1"></i>Older posts</a></li>
+            {% else %}
+            <li class="page-item disabled">
+              <a class="page-link text-sm rounded" href="#">
+              <i class="fa fa-chevron-left mr-1"></i>Older posts</a></li>
+            {% endif %}
+            {% if blogs.has_previous %}
+            <li class="page-item">
+              <a class="page-link text-sm rounded" href="{% url 'home' %}?page={{blogs.previous_page_number}}" tabindex="-1">
+                Newer posts
+              <i class="fa fa-chevron-right ml-1"></i></a></li>
+            {% else %}
+            <li class="page-item disabled">
+              <a class="page-link text-sm rounded" href="#" tabindex="-1">
+                Newer posts
+              <i class="fa fa-chevron-right ml-1"></i></a></li>
+            {% endif %}
           </ul>
         </nav>
       </div>
