--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -8,6 +8,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Price Slider Stylesheets -->
     <link rel="stylesheet" href="/media/css/nouislider.css">
     <!-- Google fonts - Playfair Display-->
@@ -60,12 +63,27 @@
 
       <nav class="navbar navbar-expand-lg fixed-top shadow navbar-light bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand py-1" href="/">myDistroHope</a>
+          <a class="navbar-brand" href="/">myDistroHope</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <i class="bi bi-brightness-high"></i>
+                <ul class="mb-0 pl-4 d-flex">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+                    </div>
+                </ul>
+                <i class="bi bi-moon-stars-fill"></i>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <form class="d-flex ">
+                  <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                      <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                </form>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto mb-lg-0">
               <li class="nav-item">
                 <a class="btn btn-info active" aria-current="page" href="#">Support</a>
               </li>
@@ -93,7 +111,6 @@
     </footer>
 
   <!-- Bootstrap-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
   </body>
 
