--- a/home/templates/blog-detail.html
+++ b/home/templates/blog-detail.html
@@ -4,35 +4,21 @@
 <section>
     <header class="header">
 
-      <nav class="navbar navbar-expand-lg fixed-top shadow navbar-light bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand py-1" href="/">myDistroHope</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <h5>
-                    {{blog_obj.title}}
-                </h5>
-              </li>
-            </ul>
-            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="btn btn-info active" aria-current="page" href="#">Support</a>
-              </li>
-            </ul>
+    <section class="position-relative py-6">
+      <img class="bg-image" src="/media/{{blog_obj.image}}" alt="">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+              <div class="bg-white rounded-lg shadow p-5"><strong class="text-uppercase text-secondary d-inline-block mb-2 text-sm">{{blog_obj.created_at}}</strong>
+              <h2 class="mb-3">{{blog_obj.title}}</h2> 
+            </div>
           </div>
         </div>
-      </nav>
-    </header>
+      </div>
+    </section>
   <div class="container"> 
     <div class="row">
-      <div class="py-4 col-xl-8 col-lg-10 mx-auto"><img class="img-fluid mb-5" src="/media/{{blog_obj.image}}" alt=""></div>
-    </div>
-    <div class="row">
-      <div class="col-xl-8 col-lg-10 mx-auto">
+      <div class="col-xl-12 col-lg-10 mx-auto py-4">
         <div class="text-content">
           {{blog_obj.content|safe}}
         </div>
